# retail-inventory-openenv

./: Dockerfile  README.md  app.py  env.py  graders.py  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  simulation.py
server/: app.py
