[project]
name = "retail-inventory-openenv"
version = "1.0.0"
description = "OpenEnv environment for retail inventory and expiry management"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.1",
    "numpy>=1.26.4",
    "openai>=1.30.1",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
name = "retail-inventory-expiry"
version = "1.0.0"
entry_point = "server.app:main"
tasks = ["easy_single_product", "medium_multi_product", "hard_full_store"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
